<resources>
    <string name="app_name">LogoraAndroid</string>
    <string name="activity_name">logora_root_activity</string>
    <string name="headerMainDebate">Débat à l\'affiche</string>
    <string name="headerTrendingDebates">Débats tendances</string>
    <string name="headerBestUsers">Débatteurs de la semaine</string>
    <string name="infoSeeMoreDebates">Voir plus de débats</string>
    <string name="infoAllDebates">Tous les débats</string>
    <string name="infoRelatedDebates">Débats sélectionnés pour vous</string>
    <string name="actionSignInIn">Connexion</string>
    <string name="debate_box_title">Titre du débat</string>
    <string name="debate_box_image_content_description">Image du débat</string>
    <string name="debate_box_vote_percentage">50% Oui</string>
    <string name="debate_box_user_list_empty">Aucun participant</string>
    <string name="user_icon_content_description">Image du participant</string>
    <string name="user_box_full_name">Nom du débatteur</string>
    <string name="user_box_level">Niveau</string>
    <string name="user_box_level_content_description">Icône de niveau</string>
    <string name="search_debate_tab">Débats</string>
    <string name="search_user_tab">Débatteurs</string>
    <string name="list_empty">Aucun élément pour l\'instant</string>
    <string name="search_header">Résultats pour</string>
    <string name="index_sort_trending_option">Le plus pertinent</string>
    <string name="index_sort_recent_option">Le plus récent</string>
    <string name="index_sort_old_option">Le plus ancien</string>
    <string name="user_image_content_description">Image de profile du débatteur</string>
    <plurals name="user_debates_count_text">
        <item quantity="one">%d argument</item>
        <item quantity="other">%d arguments</item>
    </plurals>
    <plurals name="user_votes_count_text">
        <item quantity="one">%d  vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <plurals name="user_disciples_count_text">
        <item quantity="one">%d disciple</item>
        <item quantity="other">%d disciples</item>
    </plurals>
    <string name="user_tags_header">Intérêts</string>
    <string name="user_tags_empty">Pas assez d\'activité</string>
    <string name="user_arguments_tab">Arguments</string>
    <string name="user_badges_tab">Badges</string>
    <string name="user_mentors_tab">Mentors</string>
    <string name="user_disciples_tab">Disciples</string>
    <string name="user_next_badges_header">Prochains badges à obtenir</string>
    <string name="user_badges_header">Salle des badges</string>
    <string name="user_notifications_count">0</string>
    <string name="badge_icon_content_description">Icône du badge</string>
    <string name="next_badge_icon_content_description">Icône du badge</string>
    <string name="badge_box_title">Nom du badge</string>
    <string name="badge_box_description">Description du badge</string>
    <string name="debate_name">Titre du débat</string>
    <string name="debate_published_date">Date de publication du débat</string>
    <string name="debate_first_position">Oui</string>
    <string name="debate_second_position">Non</string>
    <string name="debate_third_position">Sans opinion</string>
    <string name="vote_third_position_button">Sans opinion</string>
    <plurals name="eloquence_point">
        <item quantity="one">%d eloquence point</item>
        <item quantity="other">%d eloquence points</item>
    </plurals>
    <plurals name="debate_votes_count">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
     <string name="resultat">-Voir le résultat</string>
    <plurals name="user_vote_count">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
    <plurals name="user_argument_count">
        <item quantity="one">%d argument</item>
        <item quantity="other">%d arguments</item>
    </plurals>
    <plurals name="user_points">
        <item quantity="one">%d point</item>
        <item quantity="other">%d points</item>
    </plurals>
    <string name="debate_edit_vote">Modifier</string>
    <string name="debate_first_position_progress_text">50%</string>
    <string name="debate_second_position_progress_text">50%</string>
    <string name="debate_third_position_progress_text">50%</string>
    <string name="search_icon_content_description">Icône de recherche</string>
    <string name="search_back_icon_content_description">Icône de retour</string>
    <string name="search_placeholder">Rechercher un débat…</string>
    <string name="search_submit_icon_content_description">Icône de recherche</string>
    <string name="notification_icon_content_description">Icône de notification</string>
    <string name="debate_follow_inactive">Suivre</string>
    <string name="debate_follow_active">Suivi</string>
    <string  name="user_follow_active">Suivi</string>
    <string name="share_icon_content_description">Icône de partage</string>
    <string name="share_link_icon_content_description">Icône de copie dans le presse-papier</string>
    <string name="share_email_icon_content_description">Icône de partage par email</string>
    <string name="share_facebook_icon_content_description">Icône de partage par Facebook</string>
    <string name="share_twitter_icon_content_description">Icône de partage par Twitter</string>
    <string name="argument_sort_trending">Le plus pertinent</string>
    <string name="argument_sort_recent">Le plus récent</string>
    <string name="argument_sort_old">Le plus ancien</string>
    <string name="argument_date">Il y a 5 jours</string>
    <string name="argument_clap_icon_content_description">Icône du bouton de vote pour l\'argument</string>
    <string name="argument_reply_icon_content_description">Icône du bouton de réponse de l\'argument</string>
    <string name="argument_view_replies">Voir les réponses</string>
    <string name="argument_hide_replies">Masquer les réponses</string>
    <string name="arrow_up">&#9650;</string>
    <string name="arrow_down">&#9660;</string>
    <string name="argument_more_icon_content_description">Icône du bouton "plus d'actions" de l\'argument</string>
    <string name="more_actions">Plus d\'actions</string>
    <string name="report">Signaler</string>
    <string name="participants_count">Nombre de participants</string>
    <string name="notifications">Notifications</string>
    <string name="notification_content">Notification</string>
    <string name="notification_date">Il y a un jour</string>
    <string name="notifications_new_badge">Vous avez obtenu le badge</string>
    <string name="notifications_level_up">Vous êtes maintenant au niveau</string>
    <string name="notifications_mentor_level_up">a atteint le niveau </string>
    <string name="notifications_followed">vous a suivi</string>
    <string name="notifications_one_answers">autre personne ont répondu a</string>
    <string name="notifications_multiple_answers">autres personnes ont répondu a</string>
    <string name="notifications_answer">a répondu</string>
    <string name="notifications_multiple_support">autres personnes soutiennent</string>
    <string name="notifications_one_support">autre personne soutiennent</string>
    <string name="notifications_support">soutient</string>
    <string name="notifications_multiple_participations">autres personnes ont participé</string>
    <string name="notifications_participation">a participé</string>
    <string name="notifications_subject">a votre message dans le débat</string>
    <string name="notifications_subject_argument">votre argument</string>
    <string name="notifications_subject_debate">dans le débat</string>
    <string name="notifications_read_all">Tout marquer comme lu</string>
    <string name="notifications_group_invitation_action">vous provoque en duel</string>
    <string name="view_more">Voir plus</string>
    <string name="report_spam">Contenu indésirable ou de mauvaise qualité</string>
    <string name="report_harassment">Harcèlement</string>
    <string name="report_hate_speech">Discours haineux</string>
    <string name="report_plagiarism">Plagiat</string>
    <string name="report_fake_news">Fausses informations</string>
    <string name="report_success">Votre signalement à bien été envoyé.</string>
    <string name="report_error">Un problème est survenu lors de l\'envoi de votre signalement.</string>
    <string name="report_header">Signaler un argument</string>
    <string name="side_dialog_header">Choisissez votre camp</string>
    <string name="delete_dialog_header">Êtes-vous sûr de vouloir supprimer cet argument ?</string>
    <string name="widget_button">Aller au débat</string>
    <string name="argument_update_success">Votre argument à bien été modifié</string>
    <string name="argument_delete_success">Votre argument à bien été supprimé</string>
    <string name="argument_create_success">Votre argument à bien été publié</string>
    <string name="reply_create_success">Votre réponse à bien été publiée</string>
    <string name="issue">Un problème est survenu</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="author_box_default_name">Partagez votre opinion</string>
    <string name="author_box_default_level">Gagnez des niveaux</string>
    <string name="moderated_argument">En attente de modération</string>
    <string name="login_info">Votre action n\'est pas enregistrée ! Inscrivez-vous pour l\'enregistrer et être alerté par mail.</string>
    <string name="login_sign_up">Je m\'inscris</string>
    <string name="already_have_account">Déjà un compte ? </string>
    <string name="login_sign_in">Je me connecte</string>
    <string name="login_cancel">Continuer sans enregistrer</string>
    <string name="argument_input_placeholder">Ajouter un argument...</string>
    <string name="reply_input_placeholder">Ajouter un argument...</string>
    <string name="login_cgu">En cliquant sur « Je m’inscris », je déclare avoir pris connaissance des <a href="https://logora.fr/cgu">Conditions Générales d’Utilisation</a> de l’espace de débat et les accepter </string>
    <string name="see_all_debates">Voir tout les débats</string>
    <string name="read_more">Lire plus</string>
    <string name="share_content">Ce débat devrait vous intéresser</string>
    <string name="link_copied">Lien copié !</string>
    <string name="request_error">Une erreur est survenue lors de votre requête</string>
    <string name="error_debate">Une erreur est survenue </string>
    <string name="list_recent"><font size="30">Le plus récent</font></string>
    <string name="list_tendance">Le plus tendance</string>
    <string name="list_ancien">Le plus ancien</string>
    <string name="argument_interessant">Cet argument devrait vous intéresser</string>
    <string name="partager_argument">Partager l\'argument</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="signaler">Signaler</string>
    <string name="percentage">%</string>
    <string name="share_debat">Voici un débat qui pourrait t\'intéresser :</string>
    <string name="share_argument">Voici un argument qui pourrait t\'intéresser :</string>
    <string name="déconnexion">Déconnexion</string>
    <string name="recherche">Recherche</string>
    <string name="alerte">Alertes</string>
    <string name="titre_dialog">Débats</string>
    <string name="info_profil">Profil</string>
    <string name="user_guide">Charte de modération</string>
    <string name="bug_report">Proposer une amélioration</string>
    <string name="terms">CGU</string>
    <string name="made_by_logora">Créé par logora</string>
    <string name="retour">Retour</string>
    <string name="date">il y a</string>
    <string name="jours">jours</string>
    <string name="heures">heures</string>
    <string name="minutes">minutes</string>
</resources>