<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@drawable/box_background"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="14dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/badge_box_icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/badge_box_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/badge_icon_content_description"
            android:scaleType="fitXY" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/badge_box_presentation_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/badge_box_icon_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/badge_box_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/badge_box_title"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/badge_box_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/badge_box_description"
            android:textColor="@color/text_primary"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>