<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:background="@drawable/box_background"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="14dp">

    <LinearLayout
        android:id="@+id/next_badge_box_presentation_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="0dp">

        <TextView
            android:id="@+id/next_badge_box_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/badge_box_title"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/next_badge_box_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/badge_box_description"
            android:textColor="@color/text_primary"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/next_badge_box_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:layout_marginVertical="6dp"
            android:max="100"
            android:progress="25"
            android:progressBackgroundTint="@color/progress_background"
            android:progressTint="@color/call_primary" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/next_badge_box_icon_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/next_badge_box_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/next_badge_icon_content_description"
            android:scaleType="fitXY" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>