<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="12dp"
    tools:context=".DebateFragment">

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@android:color/black"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/debate_presentation_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/box_background"
        android:layout_marginVertical="12dp"
        android:paddingTop="16dp"
        android:paddingHorizontal="12dp">

        <TextView
            android:id="@+id/debate_published_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debate_published_date"
            android:textColor="@color/text_secondary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/debate_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/debate_published_date"
            android:layout_marginVertical="12dp"
            android:text="@string/debate_name"
            android:textColor="@color/text_primary"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/debate_tag_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/debate_name"
            android:layout_marginVertical="6dp"
            android:nestedScrollingEnabled="false" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/debate_tag_list">

            <com.logora.logora_android.views.ShareView
                android:id="@+id/debate_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:gravity="center" />

            <com.logora.logora_android.views.FollowDebateButtonView
                android:id="@+id/debate_follow_button"
                style="@style/FollowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/debate_follow_inactive" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>